Create & serve diagram from a Sinatra web app.
Includes instructions on setting up a VPS (in a 
very naive way) to host the diagram behind basic
authentication.

--- a/dotenv.example
+++ b/dotenv.example
@@ -1,2 +1,4 @@
 export TRELLO_API_KEY=your.api.key.goes.here   # https://trello.com/app-key
 export TRELLO_MEMBER_TOKEN=your.secret.token
+export USERNAME=foo
+export PASSWORD=bar
